kubernetes/services/gatus/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  labels:
    name: gatus
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
